# crewlit

./: .gitignore  GUIDE.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
data/: tools.yaml
scripts/: poetry_scripts.py  run.sh
src/crewlit/app/: app.py
src/crewlit/app/components/: __init__.py  agent_component.py  config_component.py  crew_component.py  home_component.py  kickoff_component.py  shared_components.py  task_component.py  tool_component.py
src/crewlit/app/views/: __init__.py  about_view.py  agent_view.py  config_view.py  crew_view.py  home_view.py  kickoff_view.py  linked_docs_view.py  task_view.py  tool_view.py
src/crewlit/models/: __init__.py  agent_model.py  base_model.py  crew_model.py  task_model.py  tool_model.py
src/crewlit/services/: __init__.py  agent_service.py  crew_service.py  kickoff_service.py  task_service.py  tool_service.py
src/crewlit/utils/: __init__.py  logging_config.py  string_handlers.py  yaml_handlers.py
